Word-wrapped longer spell names to fix overlap with delete button.

--- a/app/assets/stylesheets/encounters.css.scss
+++ b/app/assets/stylesheets/encounters.css.scss
@@ -161,7 +161,7 @@
           vertical-align: top;
 
           .spell-block {
-
+            white-space: normal;
             &.delete-warning {
               background-color: rgba(102, 0, 9, 0.38);
             }
